[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightrag"
version = "1.0.0"
description = "LightRAG: Simple and Fast Retrieval-Augmented Generation"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "configparser",
    "json_repair",
    "nano-vectordb",
    "numpy>=1.24.0,<3.0.0",
    "packaging",
    "pandas>=2.0.0,<2.4.0",
    "pipmaster",
    "pydantic",
    "pypinyin",
    "python-dotenv",
    "setuptools",
    "tenacity",
    "tiktoken",
]

[tool.setuptools.packages.find]
include = ["lightrag*"]